--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "staking-2ndlayer-eu",
+  "name": "TheStorageGuy-2ndlayer-eu",
   "version": "0.1.0",
   "private": true,
   "scripts": {
