Move dependencies to devDependencies

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -7,14 +7,6 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {
-    "buefy": "^0.8.20",
-    "core-js": "^3.6.5",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.0",
-    "vue": "^2.6.11",
-    "vue-router": "^3.3.2"
-  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.1",
     "@vue/cli-plugin-eslint": "~4.4.1",
@@ -22,7 +14,13 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "buefy": "^0.8.20",
+    "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.2"
   },
   "eslintConfig": {
     "root": true,
