--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "nuxt": "latest",
+    "@babel/runtime-corejs3": "latest",
     "@vue/cli-plugin-babel": "~4.4.1",
     "@vue/cli-plugin-eslint": "~4.4.1",
     "@vue/cli-service": "~4.4.1",
