--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -9,21 +9,22 @@
     "generate": "nuxt build && nuxt export"
   },
   "devDependencies": {
-    "nuxt": "latest",
     "@babel/runtime-corejs3": "latest",
     "@vue/cli-plugin-babel": "~4.4.1",
     "@vue/cli-plugin-eslint": "~4.4.1",
     "@vue/cli-service": "~4.4.1",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "vue-template-compiler": "^2.6.11",
     "buefy": "^0.8.20",
     "core-js": "^3.6.5",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.14.1",
+    "nuxt": "latest",
+    "nuxt-buefy": "^0.3.31",
     "sass-loader": "^9.0.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.2"
+    "vue-router": "^3.3.2",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
