--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,6 +22,7 @@
     "nuxt": "^2.13.3",
     "nuxt-buefy": "^0.3.31",
     "@nuxtjs/sitemap": "2.4.0",
+    "@nuxtjs/google-analytics": "^2.3.0",
     "sass-loader": "^9.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
