--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt build && nuxt export",
+    "generate": "nuxt generate",
     "serve": "nuxt serve"
   },
   "devDependencies": {
@@ -21,7 +21,9 @@
     "eslint-plugin-vue": "^7.7.0",
     "node-sass": "^5.0.0",
     "nuxt": "^2.15.3",
+    "@nuxt/content": "^1.5.0",
     "nuxt-buefy": "^0.4.4",
+    "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/sitemap": "2.4.0",
     "@nuxtjs/google-analytics": "^2.3.0",
     "sass-loader": "^10.1.1",
