--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -29,6 +29,7 @@
     "sass-loader": "^10.1.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
+    "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
