--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -30,7 +30,8 @@
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0"
   },
   "eslintConfig": {
     "root": true,
