--- a/.github/workflows/deploy-github-pages.yaml
+++ b/.github/workflows/deploy-github-pages.yaml
@@ -23,4 +23,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: src/frontend/dist
-          cname: thestorageguy.2ndlayer.eu
+          cname: thestorageguy.perlur.cloud
